--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -171,7 +171,7 @@
         <div class="element">
 
           <h1 class="colorBlack">APPOINTA</h1>
-          <h4 class="">An interview scheduling tool</h4>
+          <h4 class="">A scheduling tool for tech company schedule job interviews</h4>
         </div>
       </div>
     </div>
@@ -371,7 +371,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <p class="tArrow"> Challenge and target audience</p>
+                    <p class="tArrow"> Understanding the challenge</p>
                     <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
@@ -380,64 +380,86 @@
           </div>
           <!-- Arrow -->
 
+
+
+
+
+
+
           <div class="blankHXS"></div>
           <!-- Challenge  -->
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
+                <h4>On average, recruiters are spending <strong
+                    class="textDecor APPOINTA">two-thirds</strong> of their overall hiring process
+                  on <strong class="textDecor APPOINTA">interview scheduling</strong>.</h4>
 
-                <h4>The Yello Interview Scheduling Survey </h4>
 
-                <h4 class="leftVerLine APPOINTA"> On average, recruiters are <strong
-                    class="textDecor APPOINTA">spending ⅔ of their
-                    overall hiring time on the interview process</strong>. 67% of respondents say it
-                  takes between 30 minutes and 2 hours to schedule a single interview. For 17%, it
-                  takes two to five hours. 35% of respondents identified scheduling interviews as
-                  the most time-consuming aspect of recruitment. </h4>
-                <h4 class="leftVerLine APPOINTA"> 67% of respondents say it takes between <strong
-                    class="textDecor APPOINTA">30 minutes and 2 hours</strong> to
-                  <strong class="textDecor APPOINTA">schedule a single interview</strong>.
+                <img class="" src="Diagram_1.svg" alt="Diagram">
+
+                <h4>Along with recruitment scheduling being very time-consuming, the following
+                  factors are the reasons for the difficulties:</h4>
+
+                <h4 class="leftVerLine APPOINTA"> Reach out and get availability from the candidate
                 </h4>
+                <h4 class="leftVerLine APPOINTA"> Find an eligible interviewer from an interview
+                  pool, check availability
+                </h4>
+                <h4 class="leftVerLine APPOINTA"> <strong class="textDecor APPOINTA">Match
+                    availability</strong> between qualified candidate and
+                  eligible interviewer</h4>
+                <h4 class="leftVerLine APPOINTA">Easy to make <strong
+                    class="textDecor APPOINTA">mistakes</strong>, companies have to hire
+                  recruiter coordinators to make sure candidates won't have a bad experience</h4>
+                <h4 class="leftVerLine APPOINTA">When booking an onsite interview, it is a huge
+                  challenge to find a group of people available at the same time</h4>
+                <img class="" src="Diagram_2.svg" alt="Diagram">
 
-                <h4 class="leftVerLine APPOINTA"> 60% of recruiters say that they regularly lose
-                  candidates before they’re able to schedule an interview.</h4>
+              </div>
+              <div class="element">
+                <h4>The recruitment app and scheduling app currently they are using are not very
+                  efficient for scheduling job interviews</h4>
+
+                <h4 class="leftVerLine APPOINTA"> The existing tools such as Greenhouse and Calendly
+                  schedule for <strong class="textDecor APPOINTA">a specific interviewer</strong>.
+                  Most time, finding an interviewer from an interview pool is unnecessary because it
+                  is a uniform predetermined interview. </h4>
 
               </div>
             </div>
           </div>
           <!-- Challenge  -->
-          <div class="Grid Grid--full wrapper u-textCenter">
-            <img class="" src="Diagram_1.svg" alt="Diagram">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Target user and market</p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+          <!-- Arrow -->
+
 
           <!-- Opportunity  -->
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h4>My goal is design a <strong class="textDecor APPOINTA">scheduling
-                    tool</strong> for recruiting interviews.
-                  it helps recruiters and hiring managers <strong class="textDecor APPOINTA">arrange
-                    and schedule interviews</strong> with less time and effort. </h4>
+                <h4>The target user will be <strong class="textDecor APPOINTA">tech company
+                    recruiters and hiring managers</strong>. Ideally
+                  work in medium and large companies, with approximately more than 50 employees.
+                </h4>
 
-                    <img class="" src="Diagram_2.svg" alt="Diagram">
-
-
-
-                <h4 class="leftVerLine APPOINTA">Recruiters and hiring managers usually invite
-                  colleagues to attend interviews. It takes time to match <strong
-                    class="textDecor APPOINTA">candidate</strong>
-                  and <strong class="textDecor APPOINTA">colleague's availability</strong>
-                  in different calendars and apps.</h4>
-
-                <h4 class="leftVerLine APPOINTA">
-                  Matching colleagues' <strong class="textDecor APPOINTA">interview
-                    skills</strong> to candidate <strong class="textDecor APPOINTA">interview
-                    type</strong> from different teams sometimes is a challenge as well.</h4>
               </div>
             </div>
           </div>
           <!-- Opportunity  -->
- 
+
           <div class="blankHS"></div>
 
           <!-- Arrow -->
@@ -466,7 +488,8 @@
                     <div class="blankHXS"></div>
                     <h5> <strong> Research &amp; define </strong> </h5>
                     <ul>
-                      <li> Use cases</li>
+                      <li> Understanding the challenge </li>
+                      <li> Target user and market </li>
                       <li> User journey </li>
                       <li> Personas </li>
                       <li> Insights </li>
@@ -487,6 +510,7 @@
                       <li> Wireframes</li>
                       <li> Mid-fi screen flow</li>
                       <li> Usability testing</li>
+                      <li> Iterate</li>
 
                     </ul>
                   </div>
