--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -175,7 +175,7 @@
 
 
             <h4> Reddit<img class="IconS" src="Reddit.svg" alt="Placeholder">
-              Keywords analyser</h4>
+              Keywords analyser for business</h4>
           </div>
         </div>
       </div>
@@ -251,45 +251,91 @@
         <!-- Opportunity and use cases -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
+
+
             <div class="element">
-              <h4> Redditors are less welcoming of promoted content, topic and content are about
-                honesty and transparency. People like to read and share Reddit thoughts before or
-                after purchase. </h4>
+              <h4><strong>Problem &#47; why design it</strong></h4>
+              <h4 class="leftVerLine SEER">Business owners want to know the <strong
+                  class="textDecor SEER">engagement</strong> and <strong
+                  class="textDecor SEER">sentiment</strong> of people. <strong
+                  class="textDecor SEER">Reddit</strong> is the
+                platform where people comes to discuss product and brands.
+                <p>
+                  For example, a ccompany wants to know how people feel about a new feature
+                  launched, or a new item released. They also want to understand the positive and
+                  negative experiences with the brand and products. understand the reason based on a
+                  bunch of data.
+                </p>
 
 
-
+              </h4>
             </div>
-          </div>
-          <div class="Grid-cell">
             <div class="element">
-              <h4>My goal is to design a <strong class="textDecor SEER">keywords analysis
-                  tool</strong> with <strong class="textDecor SEER">sentiment score</strong> for
-                Reddit. This app will help the business owner <strong
-                  class="textDecor SEER">understand their customer</strong>.
-              </h4>
+              <h4><strong>Goal</strong></h4>
+              <h4 class="leftVerLine SEER">
+                <p>My goal is to design a <strong class="textDecor SEER">keywords analysis
+                    tool</strong> with <strong class="textDecor SEER">sentiment score</strong> for
+                  Reddit. </p>
 
-              <h4>The keywords analysis tool collects and analyzes large volumes of data from Reddit
-                API. Displays data on the home page with filters based on the keywords set
-              </h4>
-              <h4>Use cases can be </h4>
+                <p>This app will help the business owner understand how their <strong
+                    class="textDecor SEER">customer feels about their brand</strong>.
+                </p>
+                <p>Also help the customer support team is informed in real-time about any <strong
+                    class="textDecor SEER">negative comments</strong>. The keywords on Reddit get
+                  detected
+                  extremely quickly.</p>
 
-              <h4 class="leftVerLine SEER">Accompany want to know how people feel about a new
-                feature launched, or a new item released.</h4>
-              <h4 class="leftVerLine SEER">They also want to understand the positive and negative
-                experiences with the brand and products. understand the reason based on a bunch of
-                data</h4>
+              </h4>
             </div>
-          </div>
-          <div class="Grid-cell">
+
             <div class="element">
-
-              <h4>The customer support team is informed in real-time about any <strong
-                  class="textDecor SEER">negative comments</strong>.
+              <h4><strong>Why Reddit </strong></h4>
+              <h4 class="leftVerLine SEER">
+                <p>Redditors are less welcoming of promoted content, topic and content are about
+                  honesty and transparency. People like to read and share Reddit thoughts before or
+                  after purchase.</p>
+                <p> The business owner wants to understand how Reddit users <strong
+                    class="textDecor SEER">respond to their brand</strong>,
+                  they would like to monitor changes in how user perceive their brand and products.
+                </p>
               </h4>
-              <h4>The keywords on Reddit get detected extremely quickly </h4>
-
             </div>
+
+            <div class="element">
+              <h4><strong>Problem with search keywords on Google or Reddit</strong></h4>
+              <h4 class="leftVerLine SEER">Reddit search can not provide <strong
+                  class="textDecor SEER">overall counts</strong>, for example, if you are looking
+                for
+                a specific post, search on google or Reddit will find the result easily, but will
+                not have overall metrics for keywords. </h4>
+            </div>
+
+            <div class="element">
+              <h4><strong>Reddit API</strong></h4>
+              <h4 class="leftVerLine SEER">Reddit API allows quarrying feeds containing posts. </h4>
+            </div>
+            <div class="element">
+              <h4><strong>About sentiment</strong></h4>
+              <h4 class="leftVerLine SEER">
+                <P>Sentiments can be generated through machine learning.</P>
+
+                <p>Without a sentiment, score businesses can not <strong
+                    class="textDecor SEER">quantify</strong> the sentiment and <strong
+                    class="textDecor SEER">compare</strong>
+                  it across different dimensions. </p>
+
+                <p>Businesses not only be able to understand if user sentiment towards their
+                  brand/product is <strong class="textDecor SEER">positive</strong> or <strong
+                    class="textDecor SEER">negative</strong>, but would also like to quantify this
+                  sentiment so that it can be compared. For example, compare one date to another
+                  date, one keyword to another, one community to another community </p>
+              </h4>
+            </div>
+
+
+
           </div>
+
         </div>
         <!-- Opportunity and use cases -->
       </section>
@@ -302,7 +348,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow">Interview &#38; Affinity Mapping</p>
+                  <p class="tArrow">Survey &#38; Affinity Mapping</p>
                   <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -313,6 +359,16 @@
         <!-- Place holder -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
+            
+
+
+
+
+
+            <div class="element">
+              <h4><strong>The survey - what data does business care</strong></h4>
+ 
+            </div>
             <div class="element">
               <h4> To quickly inquire about the pain points and current solutions, I approached
                 three people for a semi-structured interview.
@@ -325,6 +381,19 @@
               <h4> How would you compare data?</h4>
 
 
+            </div>
+
+
+
+            
+
+            <div class="element">
+              <h4 class="leftVerLine SEER">
+                <p>performance of metrics over time</p>
+                <p>breakdown across communities </p>
+                <p>see individual row data </p>
+                <p>the row link to the posts themself </p>
+              </h4>
             </div>
           </div>
         </div>
@@ -1067,7 +1136,7 @@
               <div class="element">
                 <img class="modal-target" src="Hi-fi_main.svg" alt="Wireframes">
               </div>
- 
+
             </div>
           </div>
           <!-- wireframes -->
@@ -1098,7 +1167,7 @@
     <hr>
     <div class="blankHM"></div>
 
- 
+
   </main>
   <div class="blankHS"></div>
 
