--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -254,12 +254,16 @@
 
 
             <div class="element">
-              <h4><strong>Problem &#47; why design it</strong></h4>
-              <h4 class="leftVerLine SEER">Business owners want to know the <strong
-                  class="textDecor SEER">engagement</strong> and <strong
-                  class="textDecor SEER">sentiment</strong> of people. <strong
-                  class="textDecor SEER">Reddit</strong> is the
-                platform where people comes to discuss product and brands.
+              <h4 class="leftVerLine SEER">
+                <p><strong>Problem &#47; why design it</strong></p>
+
+                <p> Business owners want to know the <strong
+                    class="textDecor SEER">engagement</strong> and <strong
+                    class="textDecor SEER">sentiment</strong> of people. <strong
+                    class="textDecor SEER">Reddit</strong> is the platform where people comes to
+                  discuss product and brands.</p>
+
+
                 <p>
                   For example, a ccompany wants to know how people feel about a new feature
                   launched, or a new item released. They also want to understand the positive and
@@ -271,8 +275,9 @@
               </h4>
             </div>
             <div class="element">
-              <h4><strong>Goal</strong></h4>
               <h4 class="leftVerLine SEER">
+                <p><strong>Goal</strong></p>
+
                 <p>My goal is to design a <strong class="textDecor SEER">keywords analysis
                     tool</strong> with <strong class="textDecor SEER">sentiment score</strong> for
                   Reddit. </p>
@@ -289,8 +294,9 @@
             </div>
 
             <div class="element">
-              <h4><strong>Why Reddit </strong></h4>
               <h4 class="leftVerLine SEER">
+                <p><strong>Why Reddit</strong></p>
+
                 <p>Redditors are less welcoming of promoted content, topic and content are about
                   honesty and transparency. People like to read and share Reddit thoughts before or
                   after purchase.</p>
@@ -302,21 +308,27 @@
             </div>
 
             <div class="element">
-              <h4><strong>Problem with search keywords on Google or Reddit</strong></h4>
-              <h4 class="leftVerLine SEER">Reddit search can not provide <strong
-                  class="textDecor SEER">overall counts</strong>, for example, if you are looking
-                for
-                a specific post, search on google or Reddit will find the result easily, but will
-                not have overall metrics for keywords. </h4>
+              <h4 class="leftVerLine SEER">
+                <p><strong>Problem with search keywords on Google or Reddit</strong></p>
+                <p>Reddit search can not provide <strong class="textDecor SEER">overall
+                    counts</strong>, for example, if you are looking for a specific post, search on
+                  google or Reddit will find the result easily, but will not have overall metrics
+                  for keywords.</p>
+
+              </h4>
             </div>
 
             <div class="element">
-              <h4><strong>Reddit API</strong></h4>
-              <h4 class="leftVerLine SEER">Reddit API allows quarrying feeds containing posts. </h4>
+              <h4 class="leftVerLine SEER">
+                <p><strong>Reddit API</strong></p>
+                <p> Reddit API allows quarrying feeds containing posts.
+                </p>
+              </h4>
             </div>
             <div class="element">
-              <h4><strong>About sentiment</strong></h4>
               <h4 class="leftVerLine SEER">
+                <p><strong>About sentiment</strong></p>
+
                 <P>Sentiments can be generated through machine learning.</P>
 
                 <p>Without a sentiment, score businesses can not <strong
@@ -359,33 +371,27 @@
         <!-- Place holder -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
-            
+
 
 
 
 
 
             <div class="element">
-              <h4><strong>The survey - what data does business care</strong></h4>
- 
+              <h4><strong>What data does business care</strong></h4>
             </div>
             <div class="element">
-              <h4> To quickly inquire about the pain points and current solutions, I approached
-                three people for a semi-structured interview.
-              </h4>
-
               <h4> What are the keywords analysis challenges?</h4>
-              <h4> Do you use any sentiment analysis tools?</h4>
-              <h4> What data do you want to see every day if you have a dashboard for sentiment
-                analysis</h4>
-              <h4> How would you compare data?</h4>
-
-
             </div>
 
 
+            <div class="element">
+              <h4>Would you like to see the data from a specific community?</h4>
+              <h4> How would you compare data? Conmmunity, date and time, upvote ratio?</h4>
 
-            
+              <h4> Would you like to see metrics over? </h4>
+            </div>
+
 
             <div class="element">
               <h4 class="leftVerLine SEER">
