--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -252,96 +252,113 @@
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
 
-
             <div class="element">
-              <h4 class="leftVerLine SEER">
-                <p><strong>Problem &#47; why design it</strong></p>
+              <div class="element colorSEERBG leftVerLine SEER ">
+                <h4 class="">
+                  <p><strong>Problem &#47; why design it</strong></p>
 
-                <p> Business owners want to know the <strong
-                    class="textDecor SEER">engagement</strong> and <strong
-                    class="textDecor SEER">sentiment</strong> of people. <strong
-                    class="textDecor SEER">Reddit</strong> is the platform where people comes to
-                  discuss product and brands.</p>
-
-
-                <p>
-                  For example, a ccompany wants to know how people feel about a new feature
-                  launched, or a new item released. They also want to understand the positive and
-                  negative experiences with the brand and products. understand the reason based on a
-                  bunch of data.
-                </p>
+                  <p> Business owners want to know the <strong
+                      class="textDecor SEER">engagement</strong> and <strong
+                      class="textDecor SEER">sentiment</strong> of people. <strong
+                      class="textDecor SEER">Reddit</strong> is the platform where people comes to
+                    discuss product and brands.</p>
 
 
-              </h4>
-            </div>
-            <div class="element">
-              <h4 class="leftVerLine SEER">
-                <p><strong>Goal</strong></p>
+                  <p>
+                    For example, a ccompany wants to know how people feel about a new feature
+                    launched, or a new item released. They also want to understand the positive and
+                    negative experiences with the brand and products. understand the reason based on
+                    a
+                    bunch of data.
+                  </p>
 
-                <p>My goal is to design a <strong class="textDecor SEER">keywords analysis
-                    tool</strong> with <strong class="textDecor SEER">sentiment score</strong> for
-                  Reddit. </p>
 
-                <p>This app will help the business owner understand how their <strong
-                    class="textDecor SEER">customer feels about their brand</strong>.
-                </p>
-                <p>Also help the customer support team is informed in real-time about any <strong
-                    class="textDecor SEER">negative comments</strong>. The keywords on Reddit get
-                  detected
-                  extremely quickly.</p>
-
-              </h4>
+                </h4>
+              </div>
             </div>
 
             <div class="element">
-              <h4 class="leftVerLine SEER">
-                <p><strong>Why Reddit</strong></p>
+              <div class="element colorSEERBG leftVerLine SEER">
+                <h4>
+                  <p><strong>Goal</strong></p>
 
-                <p>Redditors are less welcoming of promoted content, topic and content are about
-                  honesty and transparency. People like to read and share Reddit thoughts before or
-                  after purchase.</p>
-                <p> The business owner wants to understand how Reddit users <strong
-                    class="textDecor SEER">respond to their brand</strong>,
-                  they would like to monitor changes in how user perceive their brand and products.
-                </p>
-              </h4>
+                  <p>My goal is to design a <strong class="textDecor SEER">keywords analysis
+                      tool</strong> with <strong class="textDecor SEER">sentiment score</strong> for
+                    Reddit. </p>
+
+                  <p>This app will help the business owner understand how their <strong
+                      class="textDecor SEER">customer feels about their brand</strong>.
+                  </p>
+                  <p>Also help the customer support team is informed in real-time about any <strong
+                      class="textDecor SEER">negative comments</strong>. The keywords on Reddit get
+                    detected
+                    extremely quickly.</p>
+                  <img class="" src="Diagram_1.svg" alt="Diagram">
+
+                </h4>
+              </div>
             </div>
 
             <div class="element">
-              <h4 class="leftVerLine SEER">
-                <p><strong>Problem with search keywords on Google or Reddit</strong></p>
-                <p>Reddit search can not provide <strong class="textDecor SEER">overall
-                    counts</strong>, for example, if you are looking for a specific post, search on
-                  google or Reddit will find the result easily, but will not have overall metrics
-                  for keywords.</p>
+              <div class="element colorSEERBG leftVerLine SEER">
+                <h4>
+                  <p><strong>Why Reddit</strong></p>
 
-              </h4>
+                  <p>Redditors are less welcoming of promoted content, topic and content are about
+                    honesty and transparency. People like to read and share Reddit thoughts before
+                    or
+                    after purchase.</p>
+                  <p> The business owner wants to understand how Reddit users <strong
+                      class="textDecor SEER">respond to their brand</strong>,
+                    they would like to monitor changes in how user perceive their brand and
+                    products.
+                  </p>
+                </h4>
+              </div>
             </div>
 
             <div class="element">
-              <h4 class="leftVerLine SEER">
-                <p><strong>Reddit API</strong></p>
-                <p> Reddit API allows quarrying feeds containing posts.
-                </p>
-              </h4>
+              <div class="element colorSEERBG leftVerLine SEER">
+                <h4>
+                  <p><strong>Problem with search keywords on Google or Reddit</strong></p>
+                  <p>Reddit search can not provide <strong class="textDecor SEER">overall
+                      counts</strong>, for example, if you are looking for a specific post, search
+                    on
+                    google or Reddit will find the result easily, but will not have overall metrics
+                    for keywords.</p>
+                </h4>
+              </div>
+            </div>
+
+
+            <div class="element">
+              <div class="element colorSEERBG leftVerLine SEER">
+                <h4>
+                  <p><strong>Reddit API</strong></p>
+                  <p> Reddit API allows quarrying feeds containing posts.
+                  </p>
+                </h4>
+              </div>
             </div>
             <div class="element">
-              <h4 class="leftVerLine SEER">
-                <p><strong>About sentiment</strong></p>
+              <div class="element colorSEERBG leftVerLine SEER">
+                <h4>
+                  <p><strong>About sentiment</strong></p>
 
-                <P>Sentiments can be generated through machine learning.</P>
+                  <P>Sentiments can be generated through machine learning.</P>
 
-                <p>Without a sentiment, score businesses can not <strong
-                    class="textDecor SEER">quantify</strong> the sentiment and <strong
-                    class="textDecor SEER">compare</strong>
-                  it across different dimensions. </p>
+                  <p>Without a sentiment, score businesses can not <strong
+                      class="textDecor SEER">quantify</strong> the sentiment and <strong
+                      class="textDecor SEER">compare</strong>
+                    it across different dimensions. </p>
 
-                <p>Businesses not only be able to understand if user sentiment towards their
-                  brand/product is <strong class="textDecor SEER">positive</strong> or <strong
-                    class="textDecor SEER">negative</strong>, but would also like to quantify this
-                  sentiment so that it can be compared. For example, compare one date to another
-                  date, one keyword to another, one community to another community </p>
-              </h4>
+                  <p>Businesses not only be able to understand if user sentiment towards their
+                    brand/product is <strong class="textDecor SEER">positive</strong> or <strong
+                      class="textDecor SEER">negative</strong>, but would also like to quantify this
+                    sentiment so that it can be compared. For example, compare one date to another
+                    date, one keyword to another, one community to another community </p>
+                </h4>
+              </div>
             </div>
 
 
