--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -161,7 +161,7 @@
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
         <div class="element">
-          <img class="" src="Hi-fi_main.svg" alt="Wireframes">
+          <img class="" src="Hi-fi_landing_short.svg" alt="Wireframes">
         </div>
       </div>
     </div>
@@ -253,7 +253,7 @@
           <div class="Grid-cell">
 
             <div class="element">
-              <div class="element colorSEERBG leftVerLine SEER ">
+              <div class="element colorSEERBG leftVerLine SEER">
                 <h4 class="">
                   <p><strong>Problem &#47; why design it</strong></p>
 
